# loredocs

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Full Git Push Workflow2.md  INSTALL.md  LICENSE  Project_Ron_Exploration_Plan.md  README.md  install.sh  pending_commits.json  pyproject.toml  requirements-lock.txt  requirements.txt  test_mcp_tools.py  test_phase2.py  test_storage.py  test_tier_integration.py  test_tiers.py
.claude-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml
docs/: AGENT_METRICS_ANALYSIS.txt  CHANGELOG.md  COMPLETED.md  DEBBIE_DASHBOARD.md  DEBBIE_PROCESS.md  IP_Protection_Strategy_ConvoVault_ProjectVault.docx  LoreDocs_Product_Spec.md  PIPELINE_AGENT_GUIDE.md  PUBLISHING.md  SDLC.md  knowledge_tools_venn_diagram.html  loredocs.dbml  marketplace_listing.md  mcp_tool_catalog.md  product_comparison_brief.md  quickstart.md  stability_mandate_2026_04_05.md
docs/architecture/: gina_lore_review_2026_04_04.md  product_review_2026_04_04.md
docs/architecture/proposals/: pka_implementation_2026_04_08.md
docs/integrations/: notebooklm_setup_2026_04_08.md
docs/internal/: AGENT_PROMPT_STANDARD.md  agent_pipeline_flow.html  product_comparison_brief.md  session_2026_03_24.md
docs/internal/architecture/: LORECONVO_architecture_review.md  LOREDOCS_architecture_review.md  OPP-013_data_pipeline_test_harness_mcp.md  OPP-015_data_catalog_lite_mcp.md  OPP-016_etl_pattern_library_skill.md  gina_session_2026_04_04.md
docs/internal/competitive/: INTAKE.md  competitive_scan_2026_04_04.md
docs/internal/loreconvo/: PUBLISHING.md  build_revenue_projection.py  marketplace_listing.md
docs/internal/loredocs/: PUBLISHING.md
docs/internal/marketing/blog_drafts/: blog_loredocs_vault_architecture_2026_04_03.md  blog_why_claude_sessions_start_from_zero_2026_04_01.md
docs/internal/marketing/promo/: email_loreconvo_session_memory_2026_04_04.md
docs/internal/other documentation/: IP_Protection_Strategy_Labyrinth.docx  knowledge_tools_venn_4way.html  knowledge_tools_venn_diagram.html  lore_licensing.txt
docs/internal/other documentation/agent prompts/: brock.md  competitive-intel.md  gina-product-review.md  gina.md  jacqueline-daily.md  jacquline-roadmap.md  john.md  madison.md  meg.md  ron.md  scout.md
docs/internal/pm/: executive_dashboard_2026_03_31.html  executive_dashboard_2026_04_01.html  executive_dashboard_2026_04_06.html  executive_dashboard_2026_04_09.html  gina_session_2026_04_01.md  labyrinth_product_roadmap_2026_04_03.html  pipeline_dashboard_2026_04_01.md
docs/internal/qa/: qa_report_2026_04_01.md  qa_report_2026_04_03.md  qa_report_2026_04_04.md  qa_report_2026_04_04_b.md
docs/internal/security/: security_report_2026_03_29.md  security_report_2026_03_30.md  security_report_2026_04_03.md  security_report_2026_04_05.md
docs/internal/technical/: tech_docs_report_2026_04_04.md  tech_docs_report_2026_04_09.md
docs/marketing/: content_calendar_madison.md
docs/pm/: executive_dashboard_2026_04_03.html  executive_dashboard_2026_04_04.html  labyrinth_product_roadmap_2026_04_04.html
docs/qa/: qa_report_2026_03_30.md
docs/security/: security_report_2026_03_30.md  security_report_2026_04_03_b.md
loredocs/: __init__.py  cli.py  compat_check.py  idle_watchdog.py  license.py  license_store.py  onboard_tool.py  semantic_search.py  server.py  storage.py  tiers.py  web_ui.py
loredocs/static/: style.css
loredocs/templates/: base.html  doc.html  doc_list.html  error.html  search.html  vault_list.html
ron_skills/: loreconvo-v0.3.0.plugin  loredocs-v0.1.0.plugin
ron_skills/convovault/: README.md  pyproject.toml
ron_skills/convovault-plugin/: .mcp.json  README.md
ron_skills/convovault/docs/: PUBLISHING.md  marketplace_listing.md
ron_skills/convovault/skills/convovault/: SKILL.md
ron_skills/convovault/src/: server.py
ron_skills/loreconvo/: .gitignore  CLAUDE.md  INSTALL.md  README.md  export-to-chat.sh  install.sh  pyproject.toml  requirements-lock.txt  requirements.txt
ron_skills/loreconvo-plugin/: README.md
ron_skills/loreconvo-plugin/.claude-plugin/: plugin.json
ron_skills/loreconvo-plugin/skills/recall/: SKILL.md
ron_skills/loreconvo-plugin/skills/save/: SKILL.md
ron_skills/loreconvo/.claude-plugin/: plugin.json
ron_skills/loreconvo/docs/: CHANGELOG.md  COWORK_RESTORE.md  INSTALL_HOOK.md  LoreConvo_Revenue_Projection.xlsx  PUBLISHING.md  cli_reference.md  marketplace_listing.md  mcp_tool_catalog.md  quickstart.md  session-bridge-prd.md
ron_skills/loreconvo/hooks/scripts/: auto_load.py  auto_save.py  on_session_end.sh  setup.sh
ron_skills/loreconvo/scripts/: onboard_verify.py
ron_skills/loreconvo/skills/loreconvo/: SKILL.md
ron_skills/loreconvo/skills/loreconvo/references/: export-formats.md  schema.md
ron_skills/loreconvo/src/: cli.py  server.py
ron_skills/loreconvo/src/core/: __init__.py  config.py  database.py  license.py  models.py
ron_skills/loreconvo/tests/: test_auto_load.py  test_cli.py  test_mcp_json_pro_defaults.py  test_onboard.py  test_plugin_json_structure.py  test_save_script.py  test_vault_suggest.py
ron_skills/loredocs/: INSTALL.md
ron_skills/loredocs-plugin/: README.md
ron_skills/loredocs-plugin/.claude-plugin/: plugin.json
ron_skills/loredocs-plugin/skills/context/: SKILL.md
ron_skills/projectvault-plugin/: .mcp.json  README.md
ron_skills/projectvault-plugin/.claude-plugin/: plugin.json
ron_skills/sql_query_optimizer/: QUICKSTART.md
ron_skills/sql_query_optimizer/api/: .env.example  Dockerfile  credits.py  main.py  optimizer.py  requirements.txt
ron_skills/sql_query_optimizer/skill/: SKILL.md
scripts/: analyze_agent_metrics.py  backfill_doc_embeddings.py  cleanup_internal_docs.sh  install_dev_plugins.sh  local_model_preprocess.py  query_loredocs.py  release.sh  run_agent_code.sh  setup_venvs.sh
skills/loredocs/: SKILL.md
skills/using-loredocs/: SKILL.md
tests/: test_loredocs_gitignore.py  test_readme_tools.py
tests/scripts/: test_local_model_preprocess.py
(+5 files in other folders)
