[project]
name = "loredocs"
version = "0.1.14"
description = "Knowledge management MCP server for AI projects - search, tag, version, and organize your project knowledge"
readme = "README.md"
license = "BUSL-1.1"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Labyrinth Analytics Consulting" }
]
keywords = ["mcp", "claude", "knowledge-management", "ai-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp[cli]==1.27.0",
    "starlette==1.3.1",
    "click==8.3.3",
    "pydantic==2.12.5",
    "pdfplumber==0.11.9",
    "python-docx==1.2.0",
    "openpyxl==3.1.5",
    "python-pptx==1.0.2",
    "cryptography==49.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==1.3.0",
]
pro = [
    "lancedb==0.30.2",
    "sentence-transformers==5.5.0",
    "pyarrow==24.0.0",
]
token-count = [
    "tiktoken==0.7.0",
]

[project.scripts]
loredocs = "loredocs.server:main"
loredocs-compat-check = "loredocs.compat_check:main"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loredocs*"]
