[project]
name = "convovault"
version = "0.3.0"
description = "Cross-surface persistent memory for Claude sessions. Vault conversations from Code, Cowork, and Chat -- recall decisions, artifacts, and context in any future session."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Labyrinth Analytics Consulting" }
]
keywords = ["mcp", "claude", "memory", "sessions", "cross-surface", "ai-tools", "claude-plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
convovault = "convovault.server:main"

[project.urls]
Homepage = "https://github.com/labyrinth-analytics/convovault"
Repository = "https://github.com/labyrinth-analytics/convovault"
"Bug Tracker" = "https://github.com/labyrinth-analytics/convovault/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# src/ IS the convovault package (flat structure: src/server.py, src/core/, etc.)
# This maps `convovault` -> src/ so that `convovault.server:main` resolves correctly.
[tool.setuptools.packages]
find = { where = ["."] }

[tool.setuptools.package-dir]
"convovault" = "src"
