[project]
name = "loreconvo"
version = "0.3.0"
description = "Cross-surface persistent memory for Claude sessions. Vault conversations from Code, Cowork, and Chat -- recall decisions, artifacts, and context in any future session."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Labyrinth Analytics Consulting" }
]
keywords = ["mcp", "claude", "memory", "sessions", "cross-surface", "ai-tools", "claude-plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
loreconvo = "loreconvo.server:main"

[project.urls]
Homepage = "https://github.com/labyrinth-analytics/loreconvo"
Repository = "https://github.com/labyrinth-analytics/loreconvo"
"Bug Tracker" = "https://github.com/labyrinth-analytics/loreconvo/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# src/ IS the loreconvo package (flat structure: src/server.py, src/core/, etc.)
# This maps `loreconvo` -> src/ so that `loreconvo.server:main` resolves correctly.
[tool.setuptools.packages]
find = { where = ["."] }

[tool.setuptools.package-dir]
"loreconvo" = "src"
